--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,7 @@
 \begin{abstract}
-        Securing Cyber-Physical and Real-Time systems is a growing concern as these systems interact with the physical environment. Off the shelf system auditing solutions like the Linux Audit framework, introduce significant overheads in terms of latency and storage, which are undesirable in this domain, which has strict task deadlines and resource constraints.
+        %Securing Cyber-Physical and Real-Time systems is a growing concern as these systems interact with the physical environment. Off the shelf system auditing solutions like the Linux Audit framework, introduce significant overheads in terms of latency and storage, which are undesirable in this domain, which has strict task deadlines and resource constraints.
         
-        This work presents \textbf{\Sys}, a solution that reduces costs associated with system auditing in these time-sensitive systems, by exploiting the predictability in their task model to drastically cut down audit log generation without losing information valuable for forensic investigations. We evaluate the effectiveness of our solution using ArduPilot, an autopilot application suite, observing a \textbf{91\%} reduction in storage costs while meeting temporal and auditing requirements of the application. \Sys provides a way forward for auditing CPS.
-        
+        %This work presents \textbf{\Sys}, a solution that reduces costs associated with system auditing in these time-sensitive systems, by exploiting the predictability in their task model to drastically cut down audit log generation without losing information valuable for forensic investigations. We evaluate the effectiveness of our solution using ArduPilot, an autopilot application suite, observing a \textbf{91\%} reduction in storage costs while meeting temporal and auditing requirements of the application. \Sys provides a way forward for auditing CPS.
+        %\todo[inline]{Add abstract}
+        Auditing allows system operators to observe and gain insights from general purpose computing systems. The information obtained by auditing systems can be used to detect and explain unexpected behavior ranging from fault diagnosis to intrusion detection and forensics after security incidents. While such mechanisms would be beneficial for many Real-Time Systems (RTS), existing audit frameworks are rarely designed to work in this domain. If audit systems are not intergrated into real-time operating systems carefully, they can negatively impact the temporal behavior of such systems. In this paper, we attempt to understand how these integrations can be realised by measuring the performance characteristics of a commodity system audit framework (i.e. Linux Audit) using ArduPilot (an open-source autopilot application suite) as well as synthetic benchmarks.
 \end{abstract}
