--- a/introduction.tex
+++ b/introduction.tex
@@ -1,21 +1,33 @@
 \section{Introduction}
 \label{sec:introduction}
 
-%Cyber-Physical Systems (CPS) are increasingly being used in automobiles, medical devices and industrial equipment. The use of internet connected devices in these domains is only expected to increase in the future with the advent of 5G technology~\cite{2020}. Interaction of CPS with the physical environment is an important differentiator from run of the mill IoT devices. These interactions often introduce real-time (RT) constraints in the system. For example, one would expect airbags in an automobile to deploy within milliseconds of a collision.
+%Talk about existing RTS auditing/logging systems, and how there is a need for system auditing frameworks. Talk about black boxes etc.
+Fault detection and diagnostic tools has driven the development of a variety of event logging frameworks for many real-time operating systems, including Composite OS~\cite{parmer2010composite,song2015c}, QNX~\cite{qnx_logging} and VxWorks~\cite{vxworks_logging}. As RTS becomes increasingly important in safety and security critical domains such as medical devices, autonomous vehicles, unmanned aeronautical vehicles, critical infrastructure and smart cities \cite{Rajkumar2010,lee2011challenges,gurgen2013self,monostori2016cyber}, the need for effective auditing support will only grow in the near future. At present, vehicle collisions and crash investigations rely on event data recorders (or black boxes) to determine fault and liability \cite{edr1,edr2,edr_blame1,edr_blame2}.
+
+%Talk about rising attacks on RTS, infra attacks, stuxnet
+However, with the rise in popularity, today's RTS have become prime targets for sophisticated attackers \cite{dhs_cpssec}. Exploits in RTS can enable vehicle hijacks \cite{cps_article_6,cps_article_7}, manufacturing disruptions \cite{cps_article_8}, IoT botnets \cite{cps_article_5}, subversion of life-saving medical devices \cite{cps_article_4,cps_article_2} and many other devastating attacks. The COVID-19 pandemic has further shed light on the potential damage of attacks on medical infrastructure \cite{cps_article_3}. These threats are not theoretical in nature, but an active and ongoing threat, as evidence by Russian attempts to take control of nuclear power, water and electric systems throughout the United States and Europe \cite{Perlroth2018} and the Stuxnet attack on Iranian nuclear centrifuges \cite{Zetter2017}.
+  
+%Talk about traditional computing environments
+In traditional computing systems, system auditing has proven to be crucial to detecting, investigating and responding to advanced intrusions. In contrast to application layer logging that is now widely used in RTS \cite{parmer2010composite,qnx_logging,vxworks_logging,song2015c}, system auditing takes away the responsibility of logging from the developer and provides a unified view of system behavior. System level logs can be parsed into a connected graph based on shared dependencies of individual events, facilitating causal analysis over the history of events within a system \cite{King2003,Bates2015,Pei2016,Milajerdi2019,Ma2016}. This capability helps security analysts trace suspicious activities to the point that the vast majority of security analysts consider audit logs to be the most crucial resource when investigating security threats~\cite{Cimpanua}. Thus, we observe that auditing can help in (a) fault detection/diagnosis and (b) understanding and detecting security events.
+ 
+%Talk about poor performance of auditing in RTS and introduce peculiarities of RTS systems 
+%Talk about log maintenance requirements, and how attackers can attempt to overwhelm the audit system and cause loss of audit logs
+While Linux Audit has been incorporated in the Embedded Linux distribution \cite{elinux}, the widespread adoption of system auditing in RTS is stymied by the poor performance of auditing frameworks, which are known to add tremendous temporal and storage overheads~\cite{Ma2018}. In a time sensitive RTS, it may be impractical to introduce such sources of temporal variance. For instance, consider an airbag deployment system in a modern automobile that has only 50 milliseconds to fully deploy the airbag after it senses a collision. As Linux Audit is known to introduce an overhead of above 40\% to applications, a naive deployment of auditing can result in personal injury to passengers in the car. Further, auditing frameworks leverage asynchronous communication methods that require the use of kernel buffers to share information between various components of the audit subsystem. Given that numerous RTS might be resource constrained, race condition attacks against audit frameworks~\cite{Paccagnella2020a} are also more likely. Thus, one needs to account for managing the entire lifecycle of an audit record, from audit generation to the time the audit record gets written to disk or sent out over the network to ensure proper functioning of the system and complete audit log collection. The design and implementation of Linux Audit is described in greater detail in Section~{\ref{sec:audit}}.
+
+%Summarize our contributions
+In summary, our work attempts to understand how system auditing can be incorporated into the schedule of RTS ($\S$\ref{sec:sched}) with a focus on the audit log maintenance overheads. We highlight issues  with naively enabling auditing($\S$\ref{sec:measurement}) and suggest future directions to enable efficient auditing on RTS. 
+
+%Cyber-Physical Systems (CPS) are increasingly being used in automobiles, medical devices and industrial equipment. The use of internet connected devices in these domains is only expected to increase in the future with the advent of 5G technology~\cite{}. Interaction of CPS with the physical environment is an important differentiator from run of the mill IoT devices. These interactions often introduce real-time (RT) constraints in the system. For example, one would expect airbags in an automobile to deploy within milliseconds of a collision.
 
 %Attacks on CPS 
-%Attacks on industrial CPS are not new. Stuxnet was uncovered in 2010 \cite{Zetter2017} amidst a lot of media attention and led to the discovery of a wide variety of long-term stealthy Advanced Persistent Threat (APT) attacks against industrial CPS. The US FDA recently notified healthcare providers about 11 security vulnerabilities that were found in actively used medical devices~\cite{Devices}. Over the past couple of years, automobile cyber-security incidents have nearly doubled as well~\cite{}.
+%Attacks on industrial CPS are not new. Stuxnet was uncovered in 2010 \cite{} amidst a lot of media attention and led to the discovery of a wide variety of long-term stealthy Advanced Persistent Threat (APT) attacks against industrial CPS. The US FDA recently notified healthcare providers about 11 security vulnerabilities that were found in actively used medical devices~\cite{}. Over the past couple of years, automobile cyber-security incidents have nearly doubled as well~\cite{}.
 
 %Link to attacks in real world settings
 %Such threats have been around in more traditional data-center settings for a while now. Host Intrusion Detection (HID) systems have been traditionally used to protect computing infrastructure against external attackers. HIDs typically monitor system events to derive a sense of normal system behavior, highlighting any deviation from the normal as attacker behavior. System audit logs are the most common source of event streams that HID systems build upon. The Linux Audit subsystem provides a means to capture auditing information with the Windows Event Viewer providing similar functionality in Windows.
 
 %Show how the predictable behavior of CPS opens up a angle of attack
-%But these auditing techniques cannot be directly applied to CPS due to its peculiar resource and timing constraints. Auditing introduces a significant temporal latency and storage costs which might adversely impact CPS performance~\cite{Ma2018}. Our novel audit reduction technique \Sys, aims to bring Linux Audit to real-time CPS while keeping up with its unique constraints. By showing a means to reduce audit log generation by leveraging predictable CPS behavior, we provide a way forward for enabling auditing in real-time cyber-physical systems.
-
-
+%\todo[inline]{Motivate the need for measuring asynchronous overheads because we need proof that things will work in the long run and don't want things to crash}
+%But these auditing techniques cannot be directly applied to CPS due to its peculiar resource and timing constraints. Auditing introduces a significant temporal latency and storage costs which might adversely impact CPS performance~\cite{}. Our novel audit reduction technique \Sys, aims to bring Linux Audit to real-time CPS while keeping up with its unique constraints. By showing a means to reduce audit log generation by leveraging predictable CPS behavior, we provide a way forward for enabling auditing in real-time cyber-physical systems.
 %The \textbf{contributions} of this paper can be summarized as :
 %\begin{itemize}
-%    \item We present \Sys, a novel audit log reduction scheme that is designed for real-time CPS applications.
-%    \item We evaluate \Sys against a real world autopilot application and find that \Sys retains all audit information while meeting temporal requirements.
 %\end{itemize}
-
