--- a/metadata.tex
+++ b/metadata.tex
@@ -8,6 +8,6 @@ The presentation of the project can be found at:
 \noindent
 The code/data of the project can be found at:
 \begin{center}
-\fbox{\url{https://github.com/you/repo}}
-\end{center}
+\fbox{\url{https://github.com/anantk17/rt-audit-measurement}}
+\end{center} 
 
