--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,3 +1,3 @@
 \section{Conclusion}
 
-This project is awesome.
+In this work we discuss challenges of incorporating Linux Audit in a real-time schedule of an RTS. We show that a naively enabling auditing is not sufficient and a synergistic co-design is required in order to enable system auditing on RTS in the future.
